   updates when changes occur instead of requiring the use of pollmailboxes.

 * CLI Command 'Manager Show Commands' no longer truncates command names longer
   than 15 characters and no longer shows authorization requirement for commands.
   'Manager Show Command' now displays the privileges needed for using a given
   manager command instead.

Channel Drivers
------------------

chan_mobile
------------------
 * Added general support for busy detection.

 * Added ECAM command support for Sony Ericsson phones.


Features
-------------------
 * The BRIDGE_FEATURES channel variable would previously only set features for
   the calling party and would set this feature regardless of whether the
   feature was in caps or in lowercase. Use of a caps feature for a letter
   will now apply the feature to the calling party while use of a lowercase
   letter will apply that feature to the called party.

 * Add support for automixmonitor to the BRIDGE_FEATURES channel variable.

Logging
-------------------
 * When performing queue pause/unpause on an interface without specifying an
   individual queue, the PAUSEALL/UNPAUSEALL event will only be logged if at
   least one member of any queue exists for that interface.

Queue
-------------------
 * Add queue available hint.  exten => 8501,hint,Queue:markq_avail
   Note: the suffix '_avail' after the queuename.
   Reports 'InUse' for no logged in agents or no free agents.
   Reports 'Idle' when an agent is free.

Core
------------------
 * Redirecting reasons can now be set to arbitrary strings. This means
   that the REDIRECTING dialplan function can be used to set the redirecting
   reason to any string. It also allows for custom strings to be read as the
   redirecting reason from SIP Diversion headers.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 10 to Asterisk 11 --------------------